# domain/entitie/category.go
@@ -1,0 +1,10 @@
+package entitie
+
+import (
+	"gorm.io/gorm"
+)
+
+type Category struct {
+	Name string `json:"name" validate:"required"`
+	gorm.Model
+}
