# openapi.yaml
@@ -142,6 +142,116 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Tag'
+  /category:
+    put:
+      tags:
+        - category
+      summary: Update an existing category
+      description: Update an existing category by Id
+      operationId: updateCategory
+      requestBody:
+        description: Update an existent category in the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Category'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Category not found
+        '405':
+          description: Validation exception
+    post:
+      tags:
+        - category
+      summary: Add a new category to the store
+      description: Add a new category to the store
+      operationId: addCategory
+      requestBody:
+        description: Create a new category in the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Category'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        '405':
+          description: Invalid input
+  /category/{categoryId}:
+    get:
+      tags:
+        - category
+      summary: Find category by ID
+      description: Returns a single product
+      operationId: getCategoryById
+      parameters:
+        - name: categoryId
+          in: path
+          description: ID of product to return
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Product not found
+    delete:
+      tags:
+        - category
+      summary: Delete category by ID
+      description: Delete category
+      operationId: deleteCategory
+      parameters:
+        - name: categoryId
+          in: path
+          description: ID of the category that needs to be deleted
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Category not found
+  /category/getAll:
+    get:
+      tags:
+        - category
+      summary: Finds Categorys
+      description: Find categorys.
+      operationId: findCategorys
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
   /product:
     put:
       tags:
